--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <h1>LE TITRE</h1>
     <div class="wrapper">
         <i id="left" class="fa-solid fa-angle-left"></i>
         <div class="carousel">
